# server

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client_priv.h  mysql.cc  mysqladmin.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqlimport.c  mysqlshow.c  mysqltest.cc
cmake/: iconv.cmake  make_dist.cmake.in  mariadb_connector_c.cmake  plugin.cmake  ssl.cmake  systemd.cmake  zlib.cmake
cmake/build_configurations/: mysql_release.cmake
cmake/os/: Windows.cmake
dbug/: dbug.c
debian/: control  mariadb-server-10.2.install
extra/mariabackup/: CMakeLists.txt  backup_copy.cc  backup_mysql.cc  innobackupex.cc  wsrep.cc  xtrabackup.cc
include/: my_sys.h  mysql_com.h  service_versions.h  sql_common.h  sslopt-longopts.h  sslopt-vars.h
include/mysql/: plugin_audit.h.pp  plugin_auth.h.pp  plugin_encryption.h.pp  plugin_ftparser.h.pp  plugin_password_validation.h.pp  services.h
libmysql/: CMakeLists.txt
libmysqld/: CMakeLists.txt
libservices/: CMakeLists.txt
mysql-test/: mysql-test-run.pl
mysql-test/r/: aggregate_functions.result  delayed.result  gis.result  grant.result  information_schema.result  loaddata.result  multi_update.result  mysqld--help.result  parser.result  ps.result  sequence_create.result  sequence_next.result  show_check.result  sp.result  subselect4.result  system_mysql_db.result  system_mysql_db_fix50030.result  transaction_timeout.result  view.result
mysql-test/suite/galera/: disabled.def  galera_2nodes_as_slave.cnf
mysql-test/suite/mariabackup/: full_backup.test  incremental_backup.test  incremental_encrypted.test  partial.test  partial_exclude.test  small_ibd.test  xb_aws_key_management.opt  xb_aws_key_management.test  xb_compressed_encrypted.test  xb_file_key_management.test  xb_fulltext_encrypted.test  xb_history.test  xb_page_compress.test  xb_partition.test  xbstream.test
mysql-test/suite/sql_sequence/: alter.result  alter.test
mysql-test/t/: aggregate_functions.test  delayed.test  gis.test  loaddata.test  multi_update.test  parser.test  ps.test  sequence.test  sequence_create.test  sequence_next.test  symlink.test  transaction_timeout.test  view.test
mysys/: CMakeLists.txt  my_delete.c
plugin/aws_key_management/: CMakeLists.txt  aws_key_management_plugin.cc
plugin/debug_key_management/: CMakeLists.txt
plugin/example_key_management/: CMakeLists.txt
plugin/file_key_management/: CMakeLists.txt  parser.cc
plugin/server_audit/: server_audit.c
scripts/: CMakeLists.txt  mysql_system_tables.sql  mysql_system_tables_fix.sql  mysqld_safe.sh
sql/: CMakeLists.txt  create_options.cc  datadict.cc  datadict.h  field.cc  field.h  filesort.cc  ha_partition.cc  ha_partition.h  ha_sequence.cc  ha_sequence.h  handler.cc  handler.h  innodb_priv.h  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_func.cc  item_func.h  item_strfunc.cc  item_subselect.cc  item_sum.cc  item_sum.h  item_timefunc.cc  item_windowfunc.cc  item_windowfunc.h  item_xmlfunc.cc  lex.h  lock.cc  log.cc  log.h  log_event.cc  log_event.h  mdl.cc  mdl.h  mysqld.cc  mysqld.h  opt_subselect.cc  (+57 more)
sql-common/: client.c
sql/share/: errmsg-utf8.txt
storage/innobase/: CMakeLists.txt
storage/innobase/btr/: btr0defragment.cc
storage/innobase/buf/: buf0buf.cc  buf0dblwr.cc  buf0dump.cc  buf0flu.cc  buf0mtflu.cc
storage/innobase/dict/: dict0dict.cc  dict0stats.cc  dict0stats_bg.cc
storage/innobase/fil/: fil0crypt.cc  fil0fil.cc
storage/innobase/fsp/: fsp0file.cc
storage/innobase/fts/: fts0opt.cc
storage/innobase/handler/: ha_innodb.cc  handler0alter.cc
storage/innobase/include/: fil0fil.h  lock0lock.h  os0file.h  os0file.ic  os0sync.h  os0thread.h  srv0srv.h  sync0sync.h  sync0sync.ic  trx0sys.h
storage/maria/: ha_maria.cc
storage/myisam/: ha_myisam.cc
tests/: CMakeLists.txt  mysql_client_fw.c  mysql_client_test.c  nonblock-wrappers.h
vio/: viosocket.c
win/packaging/: CPackWixConfig.cmake
(+81 files in other folders)
